deploy/kialiVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  gateways:
    - chat-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
